# remote-ssh-mcp

./: .gitignore  LICENSE  README.md  plugin.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
plugins/remote-ssh-mcp/: .mcp.json
plugins/remote-ssh-mcp/.claude-plugin/: plugin.json
plugins/remote-ssh-mcp/.codex-plugin/: plugin.json
plugins/remote-ssh-mcp/skills/remote-agent-config-sync/: SKILL.md
plugins/remote-ssh-mcp/skills/remote-server/: SKILL.md
plugins/remote-ssh-mcp/skills/remote-ssh/: SKILL.md
skills/remote-server/: SKILL.md
src/remote_ssh_mcp/: files.py  runner.py  server.py  session.py
tests/: smoke.py  test_files.py  test_preflight.py  test_runner.py  test_server.py  test_skills.py
