[project]
name = "remote-ssh-mcp"
version = "0.3.0"
description = "MCP server that drives persistent tmux+SSH sessions so coding agents can work on remote hosts transparently"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Square596" }]
keywords = ["mcp", "agents", "codex", "claude", "cursor", "ssh", "tmux", "remote"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
remote-ssh-mcp = "remote_ssh_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Square596/remote-ssh-mcp"
Issues = "https://github.com/Square596/remote-ssh-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remote_ssh_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
